# TypeScript-Rust-Compiler

./: .cursorrules  .gitignore  .npmignore  .projectrules  Cargo.toml  LICENSE  README.md  advanced_complex_test.ts  ascii_complex_test.ts  complex_test.ts  debug_const_enum_output  debug_output  debug_simple_start_output  debug_union_array_output  debug_with_iife_output  debug_with_null_output  generic_interface_output.rs  generic_interface_test.ts  output  package.json  simple_complex_test.ts  simple_interface_output.rs  simple_interface_test.ts  test_basic_class.ts  test_callable_interface.ts  test_class_constructor.ts  test_class_debug.rs  test_class_debug.ts  test_class_simple.ts  test_complex.ts  test_complex_output.rs  test_complex_types.ts  test_comprehensive.ts  test_enum_debug.rs  test_enum_fixed.rs  test_enum_simple.ts  test_iife.ts  test_intermediate.ts  test_medium.ts  test_readonly_output  (+10 more)
examples/: README.md  advanced_example.ts  basic_example.ts  test_all.sh
examples/advanced/: README.md
examples/basic/: README.md  enum_test.ts  function_test.ts  simple_class_test.ts  simple_test.ts  working_features_test.ts
examples/integration/: README.md  comprehensive_test.ts  import_interface_test.ts
examples_outputs/: .gitignore
src/: ast.rs  compiler.rs  error.rs  generator.rs  lexer.rs  lexer_utf8.rs  lib.rs  main.rs  parser.rs  semantic.rs  test_lexer.rs  types.rs
test_advanced_rust/: Cargo.toml
test_final_verification/: Cargo.toml
test_final_verification/src/: main.rs
test_rust_compilation/: Cargo.toml
test_simple_rust/: Cargo.toml
tests/: integration_tests.rs
