[package]
name = "TypeScript-Rust-Compiler"
version = "0.3.6"
edition = "2021"
authors = ["FrankFMY <pryanishnikovartem@gmail.com>"]
description = "High-performance TypeScript to Rust compiler"
license = "MIT"
repository = "https://github.com/FrankFMY/TypeScript-Rust-Compiler"
keywords = ["typescript", "rust", "compiler", "transpiler"]
categories = ["development-tools", "compilers"]

[dependencies]
nom = "7.1"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
indexmap = "2.0"
petgraph = "0.6"
walkdir = "2.4"
rayon = "1.8"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = "0.3"
[dev-dependencies]
tempfile = "3.8"
insta = "1.34"
criterion = { version = "0.5", features = ["html_reports"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
