[package]
name = "TypeScript-Rust-Compiler"
version = "0.3.9"
edition = "2021"

[[bin]]
name = "TypeScript-Rust-Compiler"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.0"