[package]
name = "typescript-rust-compiler"
version = "0.3.9"
edition = "2021"
authors = ["FrankFMY <pryanishnikovartem@gmail.com>"]
description = "High-performance TypeScript to Rust compiler"
repository = "https://github.com/FrankFMY/TypeScript-Rust-Compiler"
license = "MIT"
keywords = ["typescript", "rust", "compiler", "transpiler"]
categories = ["compilers", "development-tools"]

[[bin]]
name = "typescript-rust-compiler"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"